Update PropiertiesTest.java